--- a/eis-web/src/main/resources/application.yml
+++ b/eis-web/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
   profiles:
-    active: dev
+    active: prod
   datasource:
     url: jdbc:mysql://localhost:3306/eis?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
     username: root
