修改文件夹配置

--- a/eis-web/src/main/resources/application.yml
+++ b/eis-web/src/main/resources/application.yml
@@ -43,7 +43,7 @@ logging:
     org.hibernate.engine.QueryParameters: debug
     org.hibernate.engine.query.HQLQueryPlan: debug
     org.hibernate.type.descriptor.sql.BasicBinder: trace
-
+fileHome: ${user.home}
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
